tambahan section pesan

--- a/detail.html
+++ b/detail.html
@@ -71,7 +71,7 @@
         <div class="info-card">
           <h6 class="text-center">📍 Lokasi Lengkap</h6>
           <hr>
-          <div id="maps">Memuat...</div>
+          <div id="maps" class="d-flex align-items-center justify-content-center">Memuat...</div>
         </div>
         <a id="btn-wa" href="#" target="_blank" class="btn btn-order mt-3" style="color: #fff;">
           💬 Pesan Sekarang
