--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link fw-bold " href="#umkm">UMKM</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fw-bold " href="#pesan">Pesan</a>
+            <a class="nav-link fw-bold " href="#message">Pesan</a>
           </li>
           <li class="nav-item">
             <a class="nav-link fw-bold " href="#kontak">Kontak</a>
@@ -173,35 +173,45 @@
       </div>
   </section>
 
-  <!-- SECTION MESSAGE -->
+  <!-- SECTION MESSAGE - UPDATED STRUCTURE -->
   <section id="message" class="message-section">
     <div class="floating-shapes">
       <div class="shape shape-1"></div>
       <div class="shape shape-2"></div>
       <div class="shape shape-3"></div>
+      <div class="shape shape-4"></div>
     </div>
 
     <div class="container content-wrapper">
       <div class="row align-items-center">
-        <!-- Image Column diganti dengan Carousel -->
+        <!-- Image Column with Enhanced Carousel -->
         <div class="col-lg-6 text-center position-relative ps-lg-5">
-          <div id="carouselExampleIndicators" class="carousel slide shadow-orange rounded-4 overflow-hidden"
-            data-bs-ride="carousel" data-bs-interval="2000">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="asset/image/bento.jpg" class="d-block w-100 rounded-4" alt="First slide"
-                  style="object-fit: cover; height: 400px;">
+          <div class="image-container">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                  aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                  aria-label="Slide 2"></button>
               </div>
-              <div class="carousel-item">
-                <img src="asset/image/pasar.jpeg" class="d-block w-100 rounded-4" alt="Second slide"
-                  style="object-fit: cover; height: 400px;">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="asset/image/bento.jpg" class="d-block w-100" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img src="asset/image/pasar.jpeg" class="d-block w-100" alt="Second slide">
+                </div>
               </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
           </div>
         </div>
@@ -214,23 +224,27 @@
               Pesan Kami
             </div>
 
-            <p class="description">
+            <h2 class="main-heading">
+              Memajukan UMKM Kelurahan Jeruk
+            </h2>
+
+            <p class="description fw-semibold text-justify">
               Kami hadir untuk mendukung kemajuan UMKM di Kelurahan Jeruk sebagai wujud nyata dari semangat dan
-              kemandirian warga.
-              Kami percaya bahwa potensi lokal ini layak mendapatkan ruang yang lebih luas agar dapat tumbuh, dikenal,
-              dan bersaing di
-              tengah perkembangan zaman.
+              kemandirian warga. Kami percaya bahwa potensi lokal ini layak mendapatkan ruang yang lebih luas agar dapat
+              tumbuh, dikenal,
+              dan bersaing di tengah perkembangan zaman.
             </p>
 
-            <div class="organization-card">
-              <div class="org-header">
+            <!-- Modern Organization Display (No Card Shape) -->
+            <div class="organization-display">
+              <div class="org-logo-container">
                 <div class="org-logo">
                   <img src="asset/image/logokkn.jpeg" alt="Logo PRABANARANGA" class="logo-img" />
                 </div>
-                <div class="org-info">
-                  <h3>PRABANARANGA</h3>
-                  <p class="org-subtitle">Supporting PRABANARANGA</p>
-                </div>
+              </div>
+              <div class="org-info">
+                <h3>PRABANARANGA</h3>
+                <p class="org-subtitle">Supporting Local Development</p>
               </div>
             </div>
           </div>
