--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <select class="form-select custom-select-arrow" id="kategori">
                 <option value="">Semua Kategori</option>
                 <option value="Kuliner">Kuliner</option>
-                <option value="Retail">Retail</option>
+                <option value="Toko Sembako">Toko Sembako</option>
                 <option value="Jasa">Jasa</option>
               </select>
             </div>
